--- a/test/ci/kokoro/linux/py39_json.cfg
+++ b/test/ci/kokoro/linux/py39_json.cfg
@@ -1,5 +1,5 @@
 # Format: //devtools/kokoro/config/proto/build.proto
-# Copyright 2019 Google LLC
+# Copyright 2023 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -24,6 +24,22 @@ before_action {
       keystore_config_id: 74008
       keyname: "gsutil_kokoro_service_key"
     }
+    keystore_resource {
+      keystore_config_id: 74008
+      keyname: "mtls_test_account_refresh_token"
+    }
+    keystore_resource {
+      keystore_config_id: 74008
+      keyname: "mtls_test_account_client_id"
+    }
+    keystore_resource {
+      keystore_config_id: 74008
+      keyname: "mtls_test_account_client_secret"
+    }
+    keystore_resource {
+      keystore_config_id: 74008
+      keyname: "mtls_test_cert"
+    }
   }
 }
 
@@ -36,10 +52,10 @@ env_vars {
 
 env_vars {
   key: "PYMINOR"
-  value: "5"
+  value: "9"
 }
 
 env_vars {
   key: "API"
-  value: "xml"
+  value: "json"
 }
