--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "third_party/certifi"]
 	path = third_party/certifi
 	url = https://github.com/certifi/python-certifi.git
+[submodule "third_party/google-auth-library-python-httplib2"]
+	path = third_party/google-auth-library-python-httplib2
+	url = https://github.com/googleapis/google-auth-library-python-httplib2.git
