--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,6 +7,7 @@ include VERSION
 include gsutil
 include gsutil.py
 include setup.py
+include GCLOUD-MIGRATION.md
 recursive-include gslib *
 recursive-include test *
 global-exclude .git*
