--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        python-version: [3.9.x, 3.10.x, 3.11.x, 3.12.x, 3.13.x]
+        python-version: [3.9.x, 3.10.x, 3.11.x, 3.12.x, 3.13.x, 3.14.x]
 
     steps:
     - uses: actions/checkout@v4
